# AlesharikWebServer

./: .gitignore  .travis.yml  AWS.md  README.MD  build.gradle  build.sh  circle.yml  compileNative.sh  copyAgent.sh  findbugs-exclude.xml  gradle.properties  pom.xml  runServer.sh  settings.gradle
agent/: build.gradle
api/: build.gradle  compileNative.sh  copyAgent.sh  pom.xml  setupOneNio.sh
api/src/com/alesharik/webserver/api/native/: CMakeLists.txt  FindDependency.cmake  Utils.c
base/: build.gradle
dashboard/src/js/: index.jsx
database/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
internals/: build.gradle
jcstress/: build.gradle
logging/: build.gradle
main/: build.gradle  pom.xml
native/: build.gradle
native/rust/agent/: Cargo.toml
native/rust/agent/src/: lib.rs  main.rs
serverDashboard/: LICENSE  dashboard.html  index.html  visualizer.html
serverDashboard/content/: addServer.html  blank.html  buttons.html  dashboard.html  flot.html  forms.html  grid.html  icons.html  index.html  morris.html  notifications.html  panels-wells.html  tables.html  typography.html
serverDashboard/content/settings/: editTopMenuPlugins.html  mainSettings.html
serverDashboard/js/: bootstrap.min.js  dashboard.js  events.js  flot-data.js  main.js  pattern.js  timer.js  visualizer.js
serverDashboard/js/content/: dashboard.js  editTopMenuPlugins.js  mainSettings.js
serverDashboard/less/: variables.less
serverDashboard/styles/: bootstrap.css  main.css
serverless/: build.gradle
src/: Main.java
test/: build.gradle
utils/: build.gradle
(+1840 files in other folders)
